--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <div>
     <label for="todoInput">Add Todo:</label>
     <input type="text" id="todoInput">
+    <button id="todoBtn">Add</button>
     <div>
         <h2>Todo list:</h2>
         <ul id="todoList"></ul>
     </div>
+    <script src="main.js"></script>
 </div>
 </body>
 </html>
