add done list to html, js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div>
         <h2>Todo list:</h2>
         <ul id="todoList"></ul>
+        <h2>Done list:</h2>
+        <ul id="doneList"></ul>
     </div>
     <script src="main.js"></script>
 </div>
